# discord-purge-bot-rust

./: .env.example  BUILD_FOR_LINUX.md  Cargo.toml  EASY_LINUX_BUILD.md  LICENSE  MEMORY_LEAK_FIXES.md  PTERODACTYL_DEPLOYMENT.md  QUICKSTART.md  README.md  UPLOAD_TO_PTERODACTYL.md
.github/workflows/: build-linux.yml
src/: main.rs  types.rs
src/commands/: purge.rs
src/services/: history_scanner.rs  message_tracker.rs  mod.rs
