[package]
name = "discord_purge_bot"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE FILE"
authors = ["Naiml007"]
description = "High-performance Discord bot for tracking and purging user messages (Non-Commercial Use Only)"
repository = "https://github.com/Naiml007/discord-purge-bot-rust"
readme = "README.md"
keywords = ["discord", "bot", "moderation", "purge"]
categories = ["command-line-utilities"]

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
